feat(sc): improve reclassify task progress
