# apps/api/app/shared/generated/openapi_models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2026-06-21T08:44:05+00:00
+#   timestamp: 2026-06-22T11:49:18+00:00
 
 from __future__ import annotations
 
@@ -931,6 +931,7 @@ class TaskTrackerSummaryResponse(BaseModel):
     display_status: str = Field(..., title="Display Status")
     stage: str = Field(..., title="Stage")
     dataset_id: str = Field(..., title="Dataset Id")
+    dataset_name: Optional[str] = Field(None, title="Dataset Name")
     model_id: Optional[str] = Field(None, title="Model Id")
     trainer_id: Optional[str] = Field(None, title="Trainer Id")
     created_by: str = Field(..., title="Created By")
